# dreamcraft

./: .gitignore  .ignore  AGENTS.md  Cargo.toml  README.md  SUMMARY.md  Trunk.toml  debug-console.html  headless_result.json  index.html
.cargo/: config.toml
.opencode/: opencode.json  settings.local.json
.opencode/skills/: bevy.md  specs.md  tmux.md
.opencode/skills/bevy/: SKILL.md
.opencode/skills/specs/: SKILL.md
.opencode/skills/tmux/: SKILL.md
.playwright-mcp/: page-2026-04-03T00-56-11-776Z.yml  page-2026-04-03T01-13-36-043Z.yml  page-2026-04-03T01-55-56-223Z.yml  page-2026-04-03T02-12-38-889Z.yml
specs/: 01-overview.md  02-units.md  03-isometric.md  04-input.md  05-networking.md  06-agent-console.md  07-minimap.md
src/: lib.rs  main.rs  test_main.rs  web.rs
src/combat/: mod.rs
src/core/: components.rs  mod.rs  plugin.rs  resources.rs
src/grid/: mod.rs
src/input/: mod.rs
src/minimap/: mod.rs
src/pathfinding/: mod.rs
src/ui/: mod.rs
src/units/: mod.rs
tests/: level1_test.rs
web/: console.html  game.ts  index.html  index.ts  package-lock.json  package.json  test.html
web/src/: ConsoleApp.tsx
