[package]
name = "dreamcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
fixed = "1.30.0"
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = ["console", "Window", "Document", "HtmlCanvasElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "dreamcraft-bin"
path = "src/main.rs"

[[bin]]
name = "dreamcraft-test"
path = "src/test_main.rs"

[[bin]]
name = "dreamcraft-web"
path = "src/web.rs"

[[test]]
name = "level1_test"
path = "tests/level1_test.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
